feat: files CRUD
